--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,13 @@ build_jar:
     - echo "Building Bandit SDK..."
     - chmod +x gradlew
     - ./gradlew jar
+    - echo $CI_JOB_ID > job_id.txt
+    - echo $(ls build/libs/*.jar 2>/dev/null) > jar_file.txt
   artifacts:
     paths:
       - build/libs/*.jar
+      - job_id.txt
+      - jar_file.txt
     expire_in: 1 week
 
 create_release:
@@ -22,6 +26,8 @@ create_release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
+    - BUILD_JOB_ID=$(cat job_id.txt)
+    - JAR_FILE=$(cat jar_file.txt)
     - echo "Creating a release for tag $CI_COMMIT_TAG"
   release:
     name: "Release $CI_COMMIT_TAG"
@@ -30,6 +36,6 @@ create_release:
     assets:
       links:
         - name: "Download JAR"
-          url: "$CI_PROJECT_URL/-/jobs/$CI_JOB_ID/artifacts/download"
+          url: "$CI_PROJECT_URL/-/jobs/$BUILD_JOB_ID/artifacts/raw/$JAR_FILE"
   dependencies:
     - build_jar
