--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build_jar:
       - build/libs/*.jar
       - job_id.txt
       - jar_file.txt
-    expire_in: 1 week
+    expire_in: never
 
 create_release:
   stage: release
