--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ create_release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - BUILD_JOB_ID=$(cat job_id.txt)
-    - JAR_FILE=$(cat jar_file.txt)
+    - echo "BUILD_JOB_ID=$(cat job_id.txt)" >> $GITLAB_ENV
+    - echo "JAR_FILE=$(cat jar_file.txt)" >> $GITLAB_ENV
     - echo "Creating a release for tag $CI_COMMIT_TAG"
   release:
     name: "Release $CI_COMMIT_TAG"
