--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,9 @@ create_release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - cat job_id.txt
-    - cat jar_file.txt
-    - echo "BUILD_JOB_ID=$(cat job_id.txt) JAR_FILE=$(cat jar_file.txt)" >> $GITLAB_ENV
-    - cat $GITLAB_ENV
+    - BUILD_JOB_ID=$(cat job_id.txt)
+    - JAR_FILE=$(cat jar_file.txt)
+    - echo "Build job id $BUILD_JOB_ID jar file path is $JAR_FILE"
     - echo "Creating a release for tag $CI_COMMIT_TAG"
   release:
     name: "Release $CI_COMMIT_TAG"
@@ -38,6 +37,6 @@ create_release:
     assets:
       links:
         - name: "Download JAR"
-          url: "$CI_PROJECT_URL/-/jobs/$BUILD_JOB_ID/artifacts/raw/$JAR_FILE"
+          url: "$CI_PROJECT_URL/-/jobs/$$BUILD_JOB_ID/artifacts/raw/$$JAR_FILE"
   dependencies:
     - build_jar
