--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ create_release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - BUILD_JOB_ID=$(cat job_id.txt)
-    - JAR_FILE=$(cat jar_file.txt)
+    - export BUILD_JOB_ID=$(cat job_id.txt)
+    - export JAR_FILE=$(cat jar_file.txt)
     - echo "Build job id $BUILD_JOB_ID jar file path is $JAR_FILE"
     - echo "Creating a release for tag $CI_COMMIT_TAG"
   release:
