--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,6 @@ create_release:
   rules:
     - if: $CI_COMMIT_TAG
   script:
-    - export BUILD_JOB_ID=$(cat job_id.txt)
-    - export JAR_FILE=$(cat jar_file.txt)
-    - echo "Build job id $BUILD_JOB_ID jar file path is $JAR_FILE"
     - echo "Creating a release for tag $CI_COMMIT_TAG"
   release:
     name: "Release $CI_COMMIT_TAG"
@@ -37,6 +34,6 @@ create_release:
     assets:
       links:
         - name: "Download JAR"
-          url: "$CI_PROJECT_URL/-/jobs/$$BUILD_JOB_ID/artifacts/raw/$$JAR_FILE"
+          url: "$CI_PROJECT_URL/-/jobs/$(cat job_id.txt)/artifacts/raw/$(cat jar_file.txt)"
   dependencies:
     - build_jar
